# continuous

./: .gitignore  HANDSHAKE_SESSION.md  IDENTITY.md  README.md  pyproject.toml  schema.sql  schema_v2.sql  seed.py  setup.py
src/continuous/: __init__.py  cli.py  consolidation.py  core.py  extractor.py  hooks.py  identity.py  mcp_server.py  memory.py  store.py  supabase_store.py
