[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuous"
version = "0.1.0"
description = "Semantic memory system for Claude AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Joshua Gutierrez", email = "joshua@axiondeep.com" },
]
keywords = ["ai", "memory", "claude", "semantic-search", "faiss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "supabase>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
local = [
    "faiss-cpu>=1.7.4",
]
gpu = [
    "faiss-gpu>=1.7.4",
]

[project.scripts]
continuous = "continuous.cli:main"
continuous-mcp = "continuous.mcp_server:main"

[project.urls]
Homepage = "https://github.com/joshuarg007/continuous"
Repository = "https://github.com/joshuarg007/continuous"

[tool.hatch.build.targets.wheel]
packages = ["src/continuous"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
